doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4
-d
C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\Main.java
<---- end of javadoc command ---->
Loading source file C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\Main.java...
C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\Main.java:140: error: 'else' without 'if'
                                else System.out.println("Cadastro não encontrado");
                                ^
C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\Main.java:157: error: 'else' without 'if'
            else if (opcao=='4') {
            ^
C:\Users\Carmen Pires\Desktop\Java + praTi\Projeto GIT Java\Projeto4\Main.java:190: error: reached end of file while parsing
}
 ^
3 errors
